--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+   
+    <!-- centratura tramite div  -->
+    <div class="centratura">
+        
+    </div>
 </body>
 </html>
