tolto spazio al nome della foto

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="cards">
-                    <img src="img/bruce hulk.jpg" alt="Bruce">
+                    <img src="img/bruce-hulk.jpg" alt="Bruce">
                     <h3>Bruce Banner</h3>
                     <p>Scienti</p>
                     <a href="">BruceHulk@Avengers.com</a>
