errore di scrittura

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="cards">
                     <img src="img/bruce-hulk.jpg" alt="Bruce">
                     <h3>Bruce Banner</h3>
-                    <p>Scienti</p>
+                    <p>Scientist</p>
                     <a href="">BruceHulk@Avengers.com</a>
 
                 </div>
